--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "webpack": "webpack --config webpack.config.js"
+    "develop": "webpack --config webpack.config.js --mode development",
+    "product": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
@@ -19,7 +20,9 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^17.2.1",
     "html-webpack-plugin": "^5.5.3",
+    "process": "^0.11.10",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
